--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
-<body>
+<body class="container-fluid">
     <div class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-brand">Hello</div>
         <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navs"> <span class="navbar-toggler-icon"></span></button>
